fix for html x overflow bug

--- a/css/dronekit.css
+++ b/css/dronekit.css
@@ -1,3 +1,12 @@
+html {
+  font-size: 10px;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  padding-right: 0px !important;
+  overflow-x: hidden;
+  margin-right: -20px;
+}
+
+
 @media only screen and (max-width: 800px) {
   .hidden-sm{
     display: none;
